--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,15 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
-        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Profile"></activity>
-        <activity android:name=".MainActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SellProduct"
+            android:theme="@style/Theme.MaterialComponents"></activity>
+        <activity android:name=".Profile" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".SignUp" />
         <activity android:name=".Login">
             <intent-filter>
