--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MyProductsForSell"></activity>
+        <activity android:name=".ApproveActivity"></activity>
+        <activity android:name=".MyProductsForSell" />
         <activity android:name=".ProductDetailsActivity" />
         <activity
             android:name=".AdminActivity"
